--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -14,7 +15,11 @@
   </head>
   <body class="page">
     <header class="header">
+      <span class="decorative-tag">
+        &lt/html>
+      </span>         
       <nav class="theme-menu header__theme-menu">
+        <h1 class="main-title">закрывающий тег</h1>
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
           <li class="theme-menu__item">
@@ -40,7 +45,23 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main class="main">
+      <ul class="sprint-deck">
+        <li>
+          <article class="card">
+            <h2 class="card-title">Фритрек и нулевой спринт: Подготовка к работе</h2>
+            <img src="/images/truck-kun.png" alt="">
+            
+            <p class="note">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+            <p class="memory">Место для ваших воспоминаний о начале обучения.</p>
+              <button class="like">svg like</button>
+          </article>
+        </li>
+      </ul>
+
+
+
+    </main>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
