--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Закрывающий тег</title>
+    <link rel="shortcut icon" href="./svg/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -48,13 +49,15 @@
     <main class="main">
       <ul class="sprint-deck">
         <li>
+          
           <article class="card">
             <h2 class="card-title">Фритрек и нулевой спринт: Подготовка к работе</h2>
-            <img src="/images/truck-kun.png" alt="">
-            
-            <p class="note">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
-            <p class="memory">Место для ваших воспоминаний о начале обучения.</p>
+            <div class="img-wrapper"><img src="/images/truck-kun.png" alt=""></div>            
+            <footer class="card-footer">
+              <p class="note">Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
+              <p class="memory">Место для ваших воспоминаний о начале обучения.</p>
               <button class="like">svg like</button>
+            </footer>
           </article>
         </li>
       </ul>
