--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </head>
   <body class="page">
     <header class="header">
-      <span class="main-title">
-        <p class="decorative-tag">&lt/html></p> 
+      <div class="main-title">
+        <span class="decorative-tag">&lt;/html></span> 
         <h1>закрывающий тег</h1>
-      </span>         
+      </div>         
       <nav class="theme-menu header__theme-menu">
         
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -64,7 +64,7 @@
               <p class="memory">Я тогда думал, что уже кое что умею и мне будет проще. Как же я заблуждался. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -106,7 +106,7 @@
               <p class="memory">Как же меня выводили из себя эти неровные отступы между буквами во втором блоке.</p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -148,7 +148,7 @@
               <p class="memory">Я научился верстать на флексах и гридах. Это было приятное чувство. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -190,7 +190,7 @@
               <p class="memory">Неужели все эти штуковины для людей с особенностями и скринридеров мне действительно были так нужны? Ну лучше уж знать об их существовании, чем упустить оффер в будущем. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -232,7 +232,7 @@
               <p class="memory">Наставник как-то во время второго спринта сказал, что это самый сложный спринт по вёрстке. Я тогда сильно обрадовался! Но это не было правдой, по крайней мере для меня. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -274,7 +274,7 @@
               <p class="memory">Этот спринт показался мне самым важным и полезным, без адаптивности в современном мире никуда. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -316,7 +316,7 @@
               <p class="memory">Да уж, действительно, проблем с этим спринтом возникло не мало. Сколько раз было такое, что вёрстка убежала на несколько пикселей. Вроде не критично, но они накапливаются. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
@@ -350,7 +350,7 @@
             <div class="img-wrapper">
               <img class="hope" src="https://images.unsplash.com/photo-1588665343610-04dfd562e2e7?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Начало пути">
               <span class="watermark">
-                &lthope>
+                &lt;hope>
               </span>
             </div>            
             <footer class="card-footer">
@@ -358,7 +358,7 @@
               <p class="memory">Я чувствую нетерпение. Жду не дождусь, когда начнутся спринты по программированию. </p>
               <div class="like">
                 <button class="card__icon-button">
-                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">                    
+                  <svg class="like-icon" width="30" height="30" viewBox="0 0 50 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
                       <path class="contour" d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 
                         18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 
