dialog and animations

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
         </svg>
         <p>Вставьте дискету,чтобы продолжить</p>
       </div>
-      <form method="dialog">
+      <form class="dialog-form" method="dialog">
         <button type="submit" class="button dialog-button button-common">
           <span class="button__text">ок</span>
         </button>
